--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,12 @@ uuid = "decf83d6-1968-43f4-96dc-fdb3fe15fc6d"
 authors = ["ITensor developers <support@itensor.org> and contributors"]
 version = "0.1.0"
 
+[weakdeps]
+BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+
+[extensions]
+TensorProductsBlockArraysExt = "BlockArrays"
+
 [compat]
+BlockArrays = "1.2.0"
 julia = "1.10"
