--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,7 @@
 [deps]
-TensorProducts = "decf83d6-1968-43f4-96dc-fdb3fe15fc6d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
+TensorProducts = "decf83d6-1968-43f4-96dc-fdb3fe15fc6d"
+
+[compat]
+Literate = "2"
