--- a/.github/workflows/FormatCheck.yml
+++ b/.github/workflows/FormatCheck.yml
@@ -7,6 +7,11 @@ on:
     tags: '*'
   pull_request:
 
+permissions:
+  contents: read
+  actions: write
+  pull-requests: write
+
 jobs:
   format-check:
     name: "Format Check"
